modules/gdscript/tests/scripts/analyzer/errors/inferring_with_weak_type_parameter.gd
func check(untyped = 1, inferred := untyped):
	pass

func test():
	check()
